# evotorch

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  CNAME  CONTRIBUTING.md  README.md  env.yml  mkdocs.yml  noxfile.py  pyproject.toml  setup.cfg  setup.py  versions.json
.github/workflows/: docs.yaml  publish-pypi.yaml  test.yaml
docs/: gen_doc_stubs.py  index.md  notebook_conversion_lib.py  quickstart.md
docs-latest/: 404.html  gen_doc_stubs.py  index.html  objects.inv  sitemap.xml
docs-latest/examples/: index.html
docs-latest/quickstart/: index.html
docs/advanced_usage/: custom_ea.md  custom_logger.md  dist_based.md  hooks.md  ray_cluster.md  solution_batch.md
docs/examples/: SUMMARY.md  index.md
docs/user_guide/: algorithm_usage.md  algorithms_tour.md  general_usage.md  gym.md  logging.md  neuroevolution.md  problem_parallelization.md  problems.md  supervised_ne.md
examples/: README.md
examples/notebooks/: Brax_Experiments_Visualization.ipynb  Brax_Experiments_with_PGPE.ipynb  Evolving_Objects.ipynb  Feature_Space_Illumination_with_MAPElites.ipynb  Genetic_Programming.ipynb  Gym_Experiments_with_PGPE_and_CoSyNE.ipynb  Minimizing_Lennard-Jones_Atom_Cluster_Potentials.ipynb  README.md  Training_MNIST30K.ipynb  Variational_Quantum_Eigensolvers_with_SNES.ipynb
examples/scripts/: README.md  bbo_vecparallel.py  bbo_vectorized.py  moo_parallel.py  rl.py  rl_clipup.py  rl_enjoy.py  rl_gym.py  tinytraj_humanoid_bullet.py  wrapped_humanoid_bullet.py
latest/: 404.html  index.html
latest/examples/: index.html
latest/overrides/: main.html
latest/quickstart/: index.html
src/evotorch/: __init__.py  _main_logger.py  core.py  decorators.py  distributions.py  logging.py  optimizers.py  testing.py
tests/: conftest.py  test_bbo.py  test_cloning.py  test_constraint_penalization.py  test_core.py  test_decorators.py  test_examples.py  test_expects_ndim.py  test_func_alg.py  test_func_ops.py  test_ga.py  test_hook.py  test_logging.py  test_net.py  test_neuroevolution_net_parser.py  test_neuroevolution_vecgymne.py  test_normalization.py  test_objectarray.py  test_optimizers.py  test_parallelization.py  test_pareto_sorting.py  test_ranking.py  test_read_only_tensor.py  test_structures.py  test_tensor_making.py  test_tensorframe.py  test_tensors_in_container.py  test_tools_misc.py  test_tools_recursiveprintable.py  test_vecrl.py  test_versionchecking.py
v0.1.0/: 404.html  sitemap.xml
v0.1.0/examples/: index.html
v0.1.0/quickstart/: index.html
v0.1.1/: objects.inv  sitemap.xml
v0.2.0/: objects.inv  sitemap.xml
v0.2.0/javascripts/: mathjax.js
v0.2.0/quickstart/: index.html
v0.3.0/: 404.html  index.html  notebook_conversion_lib.py  sitemap.xml
v0.3.0/examples/: index.html
v0.3.0/quickstart/: index.html
v0.4.0/: 404.html  gen_doc_stubs.py  index.html  objects.inv  sitemap.xml
v0.4.0/examples/: index.html
v0.4.0/quickstart/: index.html
v0.4.1/: sitemap.xml
v0.5.1/: index.html  objects.inv
v0.5.1/examples/: index.html
v0.6.1/: 404.html  gen_doc_stubs.py  index.html  objects.inv
v0.6.1/examples/: index.html
v0.6.1/quickstart/: index.html
(+593 files in other folders)
