[metadata]
name = evotorch
url = https://evotorch.ai
project_urls =
    Documentation = https://docs.evotorch.ai
    Source Code = https://github.com/nnaisense/evotorch
description = EvoTorch is an advanced evolutionary computation library built directly on top of PyTorch, created at NNAISENSE.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0
author = Nihat Engin Toklu, Timothy Atkinson, Vojtech Micka, Rupesh Kumar Srivastava
author_email = engin@nnaisense.com, timothy@nnaisense.com, vojtech@nnaisense.com, rupesh@nnaisense.com
keywords = python, evolution, neuroevolution, evolutionary computation, genetic algorithm, reinforcement learning
classifiers =
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Topic :: Utilities
	Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.7
package_dir =
    =src
packages = find:
tests_require =
    evotorch[test]
install_requires =
    cma
    functorch
    gym
    matplotlib
    numpy
    packaging
    pandas
    ray>=1.0
    torch

[options.package_data]
* = *.txt, *.md, *.rst

[options.packages.find]
where = src

[options.extras_require]
# Logging dependencies
logging =
    mlflow
    neptune-client
    sacred
# Utility packages for running experiments and analyzing results
all =
    box2d
    pymongo
    jupyterlab
    %(logging)s
# Documentation dependencies
doc =
    mike
    mkdocs
    mkdocs-gen-files
    mkdocs-literate-nav
    mkdocs-material
    mkdocs-simple-hooks
    mkdocstrings[python-legacy]>=0.18
    nbconvert
    %(logging)s
# Test dependencies
test =
    pytest
    pytest-cov
# Development dependencies
dev =
    black
    flake8
    isort
    pre-commit
    %(all)s
    %(test)s
    %(doc)s

[mypy]
files=src/**/*.py, run/*.py, test/*.py
ignore_missing_imports=true

[flake8]
max-line-length = 120
max-complexity = 18
select = B,C,E,F,W,T4,B9
ignore = E203, E265, E266, E501, W503, F403, F401
